Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-2374

the order of --index and --ost should not prevent mkfs.lustre to work

XMLWordPrintable

    • 3
    • 5640

      The order of --index and --ost should not prevent mkfs.lustre to work

      [root@oss01 bin]# mkfs.lustre --reformat --fsname dnelust --mgsnode=mds01-ib@o2ib --index 0 --ost /dev/sdb1
      mkfs.lustre: '--index' only valid for MDT,OST
      mkfs.lustre v2.3.56

            mdiep Minh Diep - TLC
            mdiep Minh Diep - TLC
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: