LU-2374 mkfs: Make order of --index and --ost irrelevant

The order of --index and --ost should not prevent mkfs.lustre to
work. So reordered the checks which ensure that  mkfs with index is
done for ost and mdt only.

Lustre-commit: 3052583f5e89b4b4294a4df05939e749be22df3d
Lustre-change: http://review.whamcloud.com/5942

Signed-off-by: Bob Glossman <bob.glossman@intel.com>
Signed-off-by: Girish Shilamkar <gshilamkar@ddn.com>
Reviewed-by: Jian Yu <jian.yu@intel.com>
Reviewed-by: Andreas Dilger <andreas.dilger@intel.com>
Change-Id: I042bbd0ab2157b397c21095857e2011a18f54c98
Reviewed-on: http://review.whamcloud.com/8164
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: James Nunez <james.a.nunez@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>