lustre/tests/conf-sanity.sh
@@ -4089,6 +4089,33 @@ test_74() { # LU-1606
 }
 run_test 74 "Lustre client api program can compile and link"
 
+test_75() { # LU-2374
+	[[ $(lustre_version_code $SINGLEMDS) -lt $(version_code 2.4.2) ]] &&
+	                skip "Need MDS version at least 2.4.2" && return
+
+	local index=0
+	local opts_mds="$(mkfs_opts mds1 $(mdsdevname 1)) \
+		--reformat $(mdsdevname 1) $(mdsvdevname 1)"
+	local opts_ost="$(mkfs_opts ost1 $(ostdevname 1)) \
+		--reformat $(ostdevname 1) $(ostvdevname 1)"
+
+	#check with default parameters
+	add mds1 $opts_mds || error "add mds1 failed for default params"
+	add ost1 $opts_ost || error "add ost1 failed for default params"
+
+	opts_mds=$(echo $opts_mds | sed -e "s/--mdt//")
+	opts_mds=$(echo $opts_mds |
+		   sed -e "s/--index=$index/--index=$index --mdt/")
+	opts_ost=$(echo $opts_ost | sed -e "s/--ost//")
+	opts_ost=$(echo $opts_ost |
+		   sed -e "s/--index=$index/--index=$index --ost/")
+
+	add mds1 $opts_mds || error "add mds1 failed for new params"
+	add ost1 $opts_ost || error "add ost1 failed for new params"
+	return 0
+}
+run_test 75 "The order of --index should be irrelevant"
+
 test_77() { # LU-3445
 	local server_version=$(lustre_version_code $SINGLEMDS)
 
